# stoppage

./: .dockerignore  .gitignore  .mocharc.json  Anchor.toml  CLAUDE.md  Cargo.toml  Dockerfile.web  ORACLE_AGAIN_CHANGES.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  vercel.json
.github/: pull_request_template.md
apps/agent/: package.json  tsconfig.json
apps/agent/src/: eventLedger.ts  httpServer.ts  index.ts  liveStore.ts  loop.ts  oddsTracker.ts  quantClient.ts  quoteTracker.ts  replayManager.ts  source.ts  strategy.ts
apps/web/: .env.local.example  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: Achievements.tsx  ActivitySurfaces.tsx  AppMonitors.tsx  CalibrationCurve.tsx  CalibrationQuoteRow.tsx  CalibrationScoreboard.tsx  CallCard.tsx  ChainMonitor.tsx  CodeBlock.tsx  ElectricBorder.tsx  FairSparkline.tsx  FirstRunGuide.tsx  InstrumentNav.tsx  LazyWhenVisible.tsx  LiveInstrument.tsx  (+43 more)
deploy/: agent-config.example  docker-compose.vps.yml  ecosystem.agent.config.cjs  production-config.example  signoz.env.example
deploy/signoz/: alerts-matchkeeper.json  casting.yaml  dashboard-matchkeeper.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  OBSERVABILITY.md  OPERATORS.md  OPERATOR_PITCH.md  ROADMAP.md  SUBMISSION.md  hackathons.md
keys/: README.md  market-keypair.json  settlement-keypair.json
programs/market/: Cargo.toml
programs/market/src/: lib.rs
programs/settlement/: Cargo.toml
programs/settlement/src/: lib.rs
scripts/: agent-deploy.sh  check-ids.js  color-swap.js  create-demo-market.ts  create-proof-board-demo.ts  deploy.sh  init-protocol.ts  install-hooks.sh  install-signoz-vps.sh  pre-commit.sh  pre-push.sh  provision-signoz.ts  subscribe-txline.ts  sync-ids.js  verify-otel-export.ts
tests/: market.ts
tests/quant/: pricing.test.ts
(+86 files in other folders)
