[package]
name = "market"
version = "0.1.0"
description = "Stoppage market vaults: create, join (wallet or session key), claim"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
