[package]
name = "settlement"
version = "0.1.0"
description = "Stoppage settlement: verify TxLINE proofs via CPI, mark markets settled"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
# Silence `unexpected_cfgs` warnings from Anchor macro internals.
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"
